2004-11-03  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-format.c: More translatable strings.

2004-11-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Detect more wrong stuff.
	* libexif/exif-data.c: Detect recursive calls.

2004-11-02  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: added LZW
	* libexif/exif-tag.*: added few tags used by .NEF
	* libexif/exif-data.c: logging unknown tags

2004-10-20  Lutz Mueller <lutz@users.sourceforge.net>

	* Makefile.am: Add intl
	* configure.in: Add intl/Makefile. Now "make distcheck" works.

2004-10-18  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Krisztian VASAS <iron@ironiq.hu>:

	* configure.in: Create po/Makefile.in from po/Makefile.in.in

2004-10-16  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: We are now working on version 0.6.12.

2004-10-16  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: set CURRENT to 12. There have been quite a few
	  additions to the header files.

2004-10-16  Lutz Mueller <lutz@users.sourceforge.net>

	Martin Willers <willers@xm-arts.de> found an off-by-one error:

	* libexif/exif-entry.c: libexif forget to add 1 
	  to tm_mon from struct tm
	
2004-10-05  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Support for WatCom. Convert debugging code
	  to exif-log API.
	* libexif/i18n.h: Support for WatCom. Patch by Angela Wrobel.

2004-10-05  Lutz Mueller <lutz@users.sourceforge.net>

	* contrib/watcom: Files contributed by Angela Wrobel.

2004-10-04  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-mem.h: Documentation.

2004-10-04  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*: Finish replaceable memory-management.

2004-10-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-mem.[c,h]: New. First attempt to offer out-sourcing
	  of memory management.

2004-10-01  Jan Patera <patera@users.sourceforge.net>
