@@ -1,11 +1,0 @@
-/* This file is generated automatically by configure */
-#ifndef __STDINT_H
-#define __STDINT_H
-#include <sys/types.h>
-typedef unsigned char uint8_t;
-typedef unsigned short uint16_t;
-typedef unsigned long uint32_t;
-typedef signed long int32_t;
-#endif
-
-
